Second Commit: Adding an enemy ship

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script src="/Scripts/objects/background.js"></script>
     <script src="/Scripts/objects/ufo.js"></script>
     <script src="/Scripts/objects/meteor.js"></script>
+    <script src="/Scripts/objects/enemy.js"></script>
     <script src="/Scripts/objects/bullet.js"></script>
 
     <!-- More Manager Scripts -->
